--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,13 @@ include pyproject.toml
 include Makefile
 include *.md
 
+recursive-include docs *.bat
+recursive-include docs *.md
+recursive-include docs *.py
+recursive-include docs Makefile
+recursive-include docs *.gif
+recursive-include docs *.rst
+
 prune .github
 exclude .gitignore
 exclude .gitattributes
